--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "themes/tale"]
 	path = themes/tale
 	url = https://github.com/EmielH/tale-hugo.git
+[submodule "themes/minimal-academic"]
+	path = themes/minimal-academic
+	url = https://github.com/jhu724/minimal-academic.git
